# so101

./: .gitignore  INSTALL.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  deploy_act.py  eval_config.yaml  pyproject.toml
config/: camera_config.yaml
doc/: cheatsheet.md  项目设计.md
scripts/: cam_resolve.py  check_env.sh  gen_eval.py  setup.sh
src/so101/: __init__.py  benchmark.py  cache.py  calibrate.py  capture.py  check.py  cli.py  config.py  console.py  dataset.py  dataset_manager.py  dataset_viewer.py  deploy.py  doctor.py  eval.py  exceptions.py  logger.py  record.py  scan.py  sound_helpers.py  teleop.py  upload_gui.py  validator.py
tests/: test_config.py  test_optimization_modules.py
